[3.10] bpo-46521: Fix codeop to use a new partial-input mode of the parser (GH-31010). (cherry picked from commit 69e10976b2e7682c6d57f4272932ebc19f8e8859)

Co-authored-by: Pablo Galindo Salgado <Pablogsal@gmail.com>